# ChangeLog for dev-util/subversion
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.167 2005/08/25 13:33:31 pauldv Exp $

  25 Aug 2005; <pauldv@gentoo.org> files/svnserve.xinetd,
  subversion-1.2.1.ebuild:
  Fix the svnserve xinet.d script (see bug #82262)

  25 Aug 2005; <pauldv@gentoo.org> subversion-1.2.1.ebuild:
  Make the subversion book be installed again. Thanks to Axel 
  Dyks<XL@XLsigned.net> in bug #103576.

  29 Jul 2005; Aaron Walker <ka0ttic@gentoo.org> subversion-1.1.3.ebuild,
  subversion-1.2.1.ebuild:
  Added ~mips.

*subversion-1.2.1 (08 Jul 2005)

  08 Jul 2005; Paul de Vrieze <pauldv@gentoo.org> +subversion-1.2.1.ebuild:
  New upstream version

  23 Jun 2005; Sven Wegener <swegener@gentoo.org> subversion-1.2.0.ebuild:
  Correctly check for the perl USE flag before calling perl-module_pkg_postrm.

  23 Jun 2005; Fernando J. Pereda <ferdy@gentoo.org>
  subversion-1.1.3.ebuild:
  stable on alpha

  27 May 2005; <pauldv@gentoo.org> +files/vc-svn.el,
  -files/vc-svn.el.20050527, subversion-1.2.0.ebuild:
  Use the vc-svn.el from the 1.1.4 version of subversion. The new one 
  doesn't work with current emacs.

  27 May 2005; <pauldv@gentoo.org> +files/vc-svn.el.20050527,
  subversion-1.2.0.ebuild:
  Fix the problem that vc-svn.el has been changed to a canned error 
  message pointing to the proper location to get it.

*subversion-1.2.0 (25 May 2005)

  25 May 2005; <pauldv@gentoo.org> +subversion-1.2.0.ebuild:
  New upstream version, and some dependency updates. Also make zlib use 
  really optional and add it as dependency.

*subversion-1.1.4-r1 (20 May 2005)

  20 May 2005; <pauldv@gentoo.org> +subversion-1.1.4-r1.ebuild:
  Try to fix perl file collisions #82648

  12 May 2005; Elfyn McBratney <beu@gentoo.org> subversion-1.1.3.ebuild:
  Update *DEPEND.

  05 May 2005; Sven Wegener <swegener@gentoo.org> subversion-1.0.9.ebuild,