@@ -1,13 +1,13 @@
-MD5 45e17fcb63ed41d237d2c3c4082f87af ChangeLog 28833
+MD5 8825fed67484f236a9a9959ab08b79aa ChangeLog 29111
 MD5 8fbcd267012fd1eef74d5161888cc7b8 metadata.xml 222
 MD5 06d037b094b22ff7e7111ddf0171aa36 subversion-1.0.9.ebuild 9497
 MD5 c60d28f0f833c15ac51412e104163f4b subversion-1.1.1-r3.ebuild 10930
 MD5 4884915b3f085149db98b98242155e36 subversion-1.2.0.ebuild 10478
 MD5 dc21f7cf5911e8838bada6ea19c934f1 subversion-1.1.4-r1.ebuild 10380
 MD5 95ec7f00d624ef03a2243693afecbda4 subversion-1.1.3-r1.ebuild 10162
-MD5 cb575c4eaaa504b691baa39f2f89afdc subversion-1.1.3.ebuild 11131
+MD5 d4ce7ce93bd43506cec558ec1e3e361c subversion-1.1.3.ebuild 11414
 MD5 76bbb2ff27f3d246e88e5bb81d35c82b subversion-1.1.4.ebuild 10287
-MD5 7a1c16ee866d5fc564aeea59a381ba0d subversion-1.2.1.ebuild 10467
+MD5 6cf68c816a49ee846823009ecea40e24 subversion-1.2.1.ebuild 10751
 MD5 dc8ba46b50a61d868eb76f524c212381 files/vc-svn.el 16847
 MD5 4fd39b311d09602c93a9ff0aceaf8596 files/70svn-gentoo.el 136
 MD5 b355b623d5259b4b1ff75eead17fac0b files/digest-subversion-1.0.9 70
