@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/subversion
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.167 2005/08/25 13:33:31 pauldv Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.168 2005/08/25 13:47:37 pauldv Exp $
+
+  25 Aug 2005; <pauldv@gentoo.org> subversion-1.1.3.ebuild,
+  subversion-1.2.1.ebuild:
+  Fix the pkg_postinst message to suggest a more secure setup for ssh+svn 
+  such that user permissions are not overly free and membership of the 
+  apache group is not needed. (bug #94718)
 
   25 Aug 2005; <pauldv@gentoo.org> files/svnserve.xinetd,
   subversion-1.2.1.ebuild:
